--- a/gadz-it-offecial/package.json
+++ b/gadz-it-offecial/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "emoji-mart": "^5.6.0",
     "faker": "^6.6.6",
+    "framer-motion": "^11.5.4",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
